[package]
name = "lau-lie-algebra"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
description = "Lie algebra theory — structure constants, representations, exponential map, root systems, and Dynkin diagrams"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-lie-algebra"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
